--- a/myminiprojects/projects/templates/projects/stock_result.html
+++ b/myminiprojects/projects/templates/projects/stock_result.html
@@ -1,6 +1,6 @@
 {% extends "myapp/base.html" %}
 {% block content %}
-<!-- <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+<script src="https://cdn.zingchart.com/zingchart.min.js"></script>
 <h1 style="color: aliceblue;">Predicted price for "{{stock_name}}" is ${{ y_pred }}</h1>
 <br>
 <div>
@@ -13,6 +13,6 @@
   bullish market since it indicates an upward trend in the past 20-days’ stocks. Whereas, 
   if the 20-days' moving average goes below the 50-days' moving average, it will be bearish 
   since it means that the stocks fell in the past 20-days      
-</p> -->
-<h1 style="color: aliceblue;">Soory this page is under maintenance, visit us later</h1>
+
+
 {% endblock content %}
